[Admin] add + update + delect Speaker Sponsor

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
@@ -37,7 +37,7 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-briefcase" aria-hidden="true"></i>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Enter Speaker's name">
+                                    <input id="newName" type="text" class="form-control" placeholder="Enter Speaker's name">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -46,7 +46,7 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-info" aria-hidden="true"></i>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Enter Description">
+                                    <textarea id="newDescription" type="text" class="form-control" placeholder="Enter Description"></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -55,7 +55,7 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-link" aria-hidden="true"></i>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Input image url">
+                                    <input id="newImageUrl" type="text" class="form-control" placeholder="Input image url">
                                 </div>
                                 <div class="col-sm-3"></div>
                                 <div class="row col-sm-9">
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" style="margin-top:5px">Add</button>
+                            <button id="btn-add" type="button" class="btn btn-primary"  data-dismiss="modal" style="margin-top:5px">Add</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
@@ -78,23 +78,23 @@
         <div class="ibox-content">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="text-center">Speaker List</div>
                     <div class="sponsonrs-layout1">
                         <div class="row">
                             @foreach (var item in listSpeaker)
                             {
-                                <div class="col-md-3 col-sm-6 col-12">
+                                <div class="col-md-3 col-sm-6 col-12" onclick="showModalSpeaker('@(item.CollectionItemID)', '@(item.Name)', '@(item.Description)', '@(item.ImageUrl)')">
                                     <div class="box-shadow">
-                                        <a href="#" data-toggle="modal" data-target="#myModal@(item.CollectionItemID)">
+                                        <a href="#" data-toggle="modal" data-target="#speakerModal">
                                             <img src="@(item.ImageUrl)" alt="brand" class="img-fluid" style="width:260px; height:200px;">
                                         </a>
                                     </div>
                                 </div>
+                            }
                                 <!-- Trigger the modal with a button -->
                                 @*<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal@(item.CollectionItemID)">Open Modal</button>*@
 
                                 <!-- Modal -->
-                                <div class="modal fade" id="myModal@(item.CollectionItemID)" role="dialog">
+                                <div id="speakerModal" class="modal fade" role="dialog">
                                     <div class="modal-dialog">
 
                                         <!-- Modal content-->
@@ -104,14 +104,13 @@
                                                 <h4 class="modal-title">Edit Speaker</h4>
                                             </div>
                                             <div class="modal-body">
-                                                <p>@(item.Name)</p>
                                                 <div class="form-group">
                                                     <label class="col-sm-3 form-control-label">Name:</label>
                                                     <div class="col-sm-9 input-group">
                                                         <div class="input-group-addon">
                                                             <i class="fa fa-briefcase" aria-hidden="true"></i>
                                                         </div>
-                                                        <input type="text" class="form-control" placeholder="Edit Speaker's name">
+                                                        <input type="text" class="form-control speaker-title">
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -120,7 +119,7 @@
                                                         <div class="input-group-addon">
                                                             <i class="fa fa-info" aria-hidden="true"></i>
                                                         </div>
-                                                        <input type="text" class="form-control" placeholder="Edit Description">
+                                                        <textarea type="text" class="form-control speaker-description"></textarea>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -129,7 +128,7 @@
                                                         <div class="input-group-addon">
                                                             <i class="fa fa-link" aria-hidden="true"></i>
                                                         </div>
-                                                        <input type="text" class="form-control" placeholder="Input image url">
+                                                        <input type="text" class="form-control speaker-image">
                                                     </div>
                                                     <div class="col-sm-3"></div>
                                                     <div class="row col-sm-9">
@@ -140,16 +139,14 @@
                                                 </div>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="submit" class="btn btn-primary" style="margin-top:5px">Save change</button>
-                                                <button type="submit" class="btn btn-danger">Delete</button>
+                                                <button id="btn-save" type="submit" class="btn btn-primary speaker-id"  data-dismiss="modal" style="margin-top:5px">Save change</button>
+                                                <button id="btn-del" type="submit" class="btn btn-danger speaker-id" data-dismiss="modal">Delete</button>
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
-                            }
                         </div>
                     </div>
                 </div>
@@ -158,3 +155,15 @@
     </div>
 </div>
 
+@section scripts {
+    <script>
+        function showModalSpeaker(id, name, description, image) {
+            $('.speaker-title').val(name);
+            $('.speaker-description').val(description);
+            $('.speaker-image').val(image);
+            $('.speaker-id').val(id); 
+
+        }
+    </script>
+}
+    <script src="~/Content/SpeakerJs/Speaker.js"></script>
