--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -35,7 +35,7 @@
 
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title speaker-title">a</h4>
+                <h4 class="modal-title speaker-title"></h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
