--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
@@ -5,77 +5,112 @@
 
     ViewBag.Title = "Edit";
 }
-@using (Html.BeginForm("Update", "Home"))
-{
 
-    <img src="~/Content/img/background-wifi-2.png" class="img-responsive">
-    <div class="clearfix"></div>
 
-    <div class="box">
-        <div class="box-header d-flex align-items-center">
-            <h2 class="h5 display">Edit event information</h2>
-        </div>
+<img src="~/Content/img/background-wifi-2.png" class="img-responsive">
+<div class="clearfix"></div>
 
-        <div class="box-body">
-            <form class="form-horizontal">
-
-                <div class="form-group">
-                    <label class="col-sm-2 form-control-label">Name:</label>
-                    <div class="col-sm-10 input-group">
-                        <div class="input-group-addon">
-                            <i class="fa fa-briefcase" aria-hidden="true"></i>
-                        </div>
-                        <input type="text" class="form-control" placeholder="Enter event's name">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-2 form-control-label">Date and time range:</label>
-
-                    <div class="input-group col-sm-10">
-                        <div class="input-group-addon">
-                            <i class="fa fa-clock-o"></i>
-                        </div>
-                        <input type="text" class="form-control pull-right" id="reservation" placeholder="Pick time's event">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-2 form-control-label">Address:</label>
-                    <div class="col-sm-10 input-group">
-                        <div class="input-group-addon">
-                            <i class="fa fa-location-arrow" aria-hidden="true"></i>
-                        </div>
-                        <input type="text" class="form-control" placeholder="Enter address where you take place the event">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-2 form-control-label">Description:</label>
-                    <div class="col-sm-10 input-group">
-                        <textarea id="editor1" name="editor1" rows="10" cols="80">
-                                            This is my textarea to be replaced with CKEditor.
-                    </textarea>
-                    </div>
-                </div>
-
-                <div class="line"></div>
-                <div class="col-sm-8">
-
-                </div>
-                <div class="col-sm-4">
-                    <button type="submit" class="btn btn-primary">Save changes</button>
-                    <button type="submit" class="btn btn-secondary">Cancel</button>
-                </div>
-
-            </form>
-        </div>
+<div class="box">
+    <div class="box-header d-flex align-items-center">
+        <h2 class="h5 display">Edit event information</h2>
     </div>
 
+    <div class="box-body">
+        @*<form class="form-horizontal">*@
+
+            <div class="form-group">
+                <label class="col-sm-2 form-control-label">Name:</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    </div>
+                    <input type="text" id="txtName" class="form-control" placeholder="Enter event's name" value="@Html.Raw(Model.Name)">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 form-control-label">Date and time range:</label>
+
+                <div class="input-group col-sm-10">
+                    <div class="input-group-addon">
+                        <i class="fa fa-clock-o"></i>
+                    </div>
+                    <input type="text" class="form-control pull-right" id="reservation" placeholder="Pick time's event" value="@Html.Raw(Model.StartTime)">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 form-control-label">Address:</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <i class="fa fa-location-arrow" aria-hidden="true"></i>
+                    </div>
+                    <input type="text" id="txtAddress" class="form-control" placeholder="Enter address where you take place the event" value="@Html.Raw(Model.Address)">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 form-control-label">Description:</label>
+                <div class="col-sm-10 input-group">
+                    <textarea id="txtDescription" name="editor1" rows="10" cols="80">
+                        @Html.Raw(Model.EventDescription)
+                    </textarea>
+                </div>
+            </div>
+
+            <div class="line"></div>
+            <div class="col-sm-8">
+
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-primary" id="btnUpdate">Save changes</button>
+                <button type="submit" class="btn btn-secondary">Cancel</button>
+            </div>
+
+        @*</form>*@
+    </div>
+</div>
 
 
 
 
+
+
+
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            $('#btnUpdate').click(function () {
+                $.ajax({
+                    url: @Url.Action("Update","Home"),
+                    method: "POST",
+                    data: {
+                        EventID: 1,
+                        Name: $('#txtName').val(),
+                        Address: $('#txtAddress'),
+                        EventDescription: $('#txtDescription')
+
+                    },
+                    success: function (data) {
+
+                    },
+                    error: function (data) {
+                        console.log(data);
+                    }
+                });
+            });
+            // Replace the <textarea id="editor1"> with a CKEditor
+            // instance, using default configuration.
+            CKEDITOR.replace('editor1');
+
+            //Date range picker
+            $('#reservation').daterangepicker();
+
+            
+        });
+
+
+    </script>
 }
 <style>
     .line {
